# fugatto-audio-lab

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTONOMOUS_PROGRESSIVE_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  BACKLOG.md  CHANGELOG.md  COMPREHENSIVE_PRODUCTION_VALIDATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  GENERATION_4_0_QUANTUM_COMPLETION_REPORT.md  GENERATION_4_QUANTUM_PLATFORM.md  GENERATION_5_0_QUANTUM_CONSCIOUSNESS_RELEASE.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_PUBLICATION_PACKAGE.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  TERRAGON_SDLC_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_PROGRESSIVE_QUALITY_COMPLETION_REPORT.md  autonomous_progressive_enhancement.py  autonomous_quality_verification.py  autonomous_resilience_engine.py  comprehensive_production_validation.py  comprehensive_quality_gates.py  comprehensive_test_suite.py  demo_generation1.py  demo_generation3_scalable.py  demo_simple_generation.py  deploy.sh  (+46 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: CODEOWNERS  dependabot.yml
.terragon/: value-config.yaml  value-metrics.json
benchmarks/: __init__.py  performance_benchmarks.py
checkpoints/: test_001_validation_complete.json  test_001_validation_start.json  test_002_validation_start.json  test_003_validation_complete.json  test_003_validation_start.json  test_004_validation_complete.json  test_004_validation_start.json  test_005_validation_complete.json  test_005_validation_start.json  test_006_validation_complete.json  test_006_validation_start.json
config/: dependency_failure_simulation.json  enhanced_error_handling.json  enhanced_monitoring.json  enhanced_performance_tracking.json  enhanced_quantum_planner.json  full_system_integration.json  high_load_simulation.json  nginx.conf
deployment/: Dockerfile  deployment-config.json  k8s-deployment.yaml  monitoring-config.json  performance-config.json  security-config.json
docs/: ARCHITECTURE.md  AUTONOMOUS_SDLC_REPORT.md  CICD_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  ROADMAP.md  SECURITY_GUIDELINES.md  TESTING.md  WORKFLOW_SETUP.md
fugatto_lab/: __init__.py  adaptive_learning_engine.py  adaptive_quantum_streaming.py  advanced_monitoring.py  advanced_neural_audio_processor.py  advanced_quantum_audio_research_engine.py  advanced_research_engine.py  advanced_security_framework.py  auto_optimizer.py  auto_scaling.py  batch_processor.py  cli.py  consciousness_integrated_audio_engine.py  core.py  distributed_processing_engine.py  enterprise_deployment.py  enterprise_fault_tolerance.py  enterprise_security_framework.py  global_quantum_deployment_orchestrator.py  hyper_scale_orchestrator.py  intelligent_scheduler.py  monitoring.py  neural_adaptive_enhancement.py  optimization.py  performance_optimization.py  performance_optimization_suite.py  performance_scaler.py  quantum_consciousness_monitor.py  quantum_memory_optimization.py  quantum_multi_dimensional_orchestrator.py  quantum_multi_dimensional_scheduler.py  quantum_neural_optimizer.py  quantum_planner.py  research_excellence_framework.py  research_quantum_neural_scheduler.py  research_quantum_neural_scheduler_v2.py  resilient_fault_tolerance.py  robust_error_handling.py  robust_validation.py  scaling.py  (+5 more)
generation1_outputs/: generation1_demo_results.json
generation2_robust_outputs/: generation2_robust_results.json
scripts/: doctor.py  setup-dev.sh  setup.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_api.py  test_api_integration.py  test_contracts.py  test_core.py  test_data_processing.py  test_database.py  (+8 more)
(+29 files in other folders)
